<resources>
    <string name="app_name">CCG</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="agree">I agree to <u>terms and conditions</u></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="apply">Apply</string>
    <string name="forgot">Forgot password</string>
    <string name="dontHaveMail">If you dont have Email ID contact</string>
    <string name="purva">Ms. Purva  : 07426112386</string>
    <string name="welcome">Welcome to Chosen Care Group staff portal</string>
    <string name="see">See whats happening in your organisation right now</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="heading">Chosen Care Group</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeDesc">You have 5 messages, 3 training and 4 vacancies since your last visit.</string>
    <string name="hi">Hi Srinivas</string>
    <string name="msgBoard">Message</string>
    <string name="messageBoard">Message Board</string>
    <string name="training">Training</string>
    <string name="jobs">Jobs</string>
    <string name="events">Events</string>
    <string name="safeGuarding">Safe Guarding</string>
    <string name="childProtection">Child Protection</string>
    <string name="myBooking">My Activities</string>
    <string name="title">Title goes here</string>
    <string name="editProfile">Edit profile</string>
    <string name="tit">Title : </string>
    <string name="phone">Phone : </string>
    <string name="changePassword">Change password</string>
    <string name="profile">Profile</string>
    <string name="currentPwd">Current Password</string>
    <string name="newPwd">New Password</string>
    <string name="cnfPwd">Confirm Password</string>
    <string name="Submit">Submit</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_choose_from_gallery">Choose from Gallery</string>
    <string name="text_add_photo">Add Photo!</string>
    <string name="cancel">Cancel</string>
    <string name="text_permission_necessary">Permission necessary</string>
    <string name="text_external_storage_permission_is_necessary">External storage permission is necessary</string>
    <string name="text_select_file">Select File</string>
    <string name="totMsg">You have 4 messages in total.</string>
    <string name="comment">Comment</string>
    <string name="allComments">Show all comments</string>
    <string name="send">Send</string>
    <string name="trining">Training</string>
    <string name="contactOrganiser">Contact - Organiser</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="registerText">Are you sure you want register ?</string>
    <string name="login_terms">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. We are offering you this app to use for your own personal use without cost, but you should be aware that you cannot send it on to anyone else, and you’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Chosen Care Group. +
                        "\n" + "Chosen care Group is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services.\n" +
                        "\n" +   "The Chosen Care Group app stores and processes personal data that you have provided to us so that you can book trainings or events. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Chosen Care Group app won’t work properly or at all. \n" +
                        "\n" +
                        "The connection can be Wi-Fi, or provided by your mobile network provider, but Chosen Care Group cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n" +
                        "\n" +
                        "If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third-party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n" +
                        "\n" +
                        "Along the same lines, Chosen Care Group cannot always take responsibility for the way you use the app. At some point we may wish to update the app. The app is currently available on Android and iOS – the requirements for both systems (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. \n" +
                        "Chosen Care Group does not promise that it will always update the app so that it is relevant to you and/or works with the iOS/Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, we may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.\n</string>
    <string name="photos">Photos</string>
    <string name="friends">Let your friends about the vacancy</string>
    <string name="childrenAdult">Safe Guarding Adults and Children</string>
    <string name="safeGuardingAdults">Safeguarding Adults Guide</string>
    <string name="safeGuardingChildren">Safeguarding Children and Yound Person Guide</string>
    <string name="contactResource">Contacts and Resources</string>
    <string name="contactPerson">MR ASAD ABDULLAH</string>
    <string name="contactAddress">Registered Manager</string>
    <string name="telContact">T - 02036595052</string>
    <string name="mobContact">M - 07540250482</string>
    <string name="email">E - asad@chosencare</string>
    <string name="safeGuardingAdult">Safe Guarding Adults</string>
    <string name="safeGuardingChildre">Safeguarding Children and Yound Person</string>
    <string name="contact">Contact</string>
    <string name="aboutUs">About us</string>
    <string name="contactUs">Contact us</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="mail">E - mail</string>
</resources>