<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blah.blah.app.ClientActivity">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home"
        app:showAsAction="always"
        android:title="@string/title_home"
        android:orderInCategory="0"

       />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@mipmap/user"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:title="@string/title_dashboard" />

 <!--   <item
        android:id="@+id/navigation_notifications"
        android:icon="@mipmap/bell"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_more"
        android:icon="@mipmap/more"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:title="@string/title_more" />
</menu>

