<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@mipmap/login_bg"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
  >

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_width="wrap_content"
        android:scaleType="fitXY"
        android:layout_gravity="center"

        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/login_logo" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/scrollView_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:paddingLeft="@dimen/dimen_20"
        android:id="@+id/welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <TextView
        android:paddingLeft="@dimen/dimen_20"
        android:id="@+id/see"
        android:layout_marginTop="@dimen/dimen_5"
        android:textSize="@dimen/dimen_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="vertical">
        <EditText
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_20"
            android:paddingLeft="@dimen/dimen_40"
            android:paddingRight="@dimen/dimen_80"
            android:drawableLeft="@mipmap/user"
            android:background="@color/light_gray"
            android:gravity="center"
            android:inputType="text"
            android:layout_gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/dark_pink"
            android:hint="@string/username"
            android:textColorHint="@color/dark_pink"
            android:id="@+id/username"/>

        <EditText
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/dimen_3"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_20"
            android:paddingLeft="@dimen/dimen_40"
            android:paddingRight="@dimen/dimen_80"
            android:drawableLeft="@mipmap/password"
            android:background="@color/light_gray"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/dark_pink"
            android:hint="@string/password"
            android:textColorHint="@color/dark_pink"
            android:id="@+id/password"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/agreeImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/uncheck" />
            <TextView
                android:paddingLeft="@dimen/dimen_20"
                android:id="@+id/agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

            android:text="@string/agree" />
        </LinearLayout>
        <RelativeLayout
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_gravity="center"
            android:layout_width="match_parent">
            <ImageView
                android:id="@+id/loginImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/button_login" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_5"
                android:textStyle="bold"
                android:gravity="center"

                android:layout_gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@color/dark_pink" />
        </RelativeLayout>
        <TextView
            android:paddingLeft="@dimen/dimen_20"
            android:id="@+id/forgot"
            android:onClick="ForgotPassword"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot" />
    </LinearLayout>

</LinearLayout>
    </ScrollView>


</LinearLayout>
