<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"

    android:layout_height="wrap_content"
    android:theme="@android:style/Theme.NoTitleBar"
    android:background="@color/gray"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/linearLayout2"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/descImage"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:layout_height="120dp"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/user" />

        <TextView
            android:id="@+id/sorryText"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/cement"
            android:textSize="@dimen/dimen_15"
            android:gravity="center"
            android:textStyle=""
            android:text="@string/registerText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/agreeImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/uncheck" />
            <TextView
                android:paddingLeft="@dimen/dimen_20"
                android:id="@+id/agree"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agree" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_black"
            android:layout_marginTop="@dimen/dimen_10"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/strokeLine"
                android:text="@string/cancel"
                android:textSize="@dimen/padding_normal"
                android:textColor="@color/dark_black"
                              />
            <Button
                android:id="@+id/reg"
                android:layout_marginLeft="@dimen/dimen_1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/strokeLine"
                android:text="@string/register"
                android:textSize="@dimen/padding_normal"

                android:textColor="@color/dark_black"



               />
        </LinearLayout>


    </LinearLayout>




</RelativeLayout>